diagnostics: Move install logic to GN
This is part of a two CL change which migrates install logic from ebuild
to gn.

BUG=chromium:1184602
TEST=USE=”test” emerge-zork chromeos-base/diagnostics-dpsl-test
TEST=confirm installed files unchanged by: equery-zork f
chromeos-base/diagnostics-dpsl-test

Cq-Depend: chromium:5149238
Change-Id: I623f866739cdd29d0c2ca4b83a598432c51f2ace
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5148381
Reviewed-by: Byron Lee <byronlee@chromium.org>
Commit-Queue: William Mahon <wmahon@google.com>
Tested-by: William Mahon <wmahon@google.com>

--- a/diagnostics/dpsl/test_utils/BUILD.gn
+++ b/diagnostics/dpsl/test_utils/BUILD.gn
@@ -25,6 +25,7 @@ executable("diagnostics_dpsl_test_listener") {
     ":libcommon",
     "//diagnostics/grpc:wilco_dtc_grpc_protos",
   ]
+  install_path = "bin"
 }
 
 # Executable for E2E VM tests.
@@ -35,4 +36,5 @@ executable("diagnostics_dpsl_test_requester") {
     ":libcommon",
     "//diagnostics/grpc:wilco_dtc_grpc_protos",
   ]
+  install_path = "bin"
 }
