multiple: Allow debugd to query the status
BUG=b:316968788
TEST=CQ

Change-Id: I656e22e6a0b3245d3eb38e0b10117b01ff3397f2
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5149358
Tested-by: Yi Chou <yich@google.com>
Reviewed-by: Howard Yang <hcyang@google.com>
Commit-Queue: Yi Chou <yich@google.com>

--- a/cryptohome/etc/org.chromium.UserDataAuth.conf
+++ b/cryptohome/etc/org.chromium.UserDataAuth.conf
@@ -240,6 +240,18 @@
            send_member="GetEncryptionInfo"/>
   </policy>
 
+  <policy user="debugd">
+    <allow send_destination="org.chromium.UserDataAuth"
+           send_interface="org.chromium.CryptohomePkcs11Interface"
+           send_member="Pkcs11IsTpmTokenReady"/>
+    <allow send_destination="org.chromium.UserDataAuth"
+           send_interface="org.chromium.CryptohomeMiscInterface"
+           send_member="GetLoginStatus"/>
+    <allow send_destination="org.chromium.UserDataAuth"
+           send_interface="org.chromium.UserDataAuthInterface"
+           send_member="IsMounted"/>
+  </policy>
+
   <policy context="default">
     <deny send_destination="org.chromium.UserDataAuth" />
   </policy>
