--- a/device_management/org.chromium.DeviceManagement.conf
+++ b/device_management/org.chromium.DeviceManagement.conf
@@ -30,4 +30,12 @@
            send_interface="org.chromium.DeviceManagement"
            send_member="GetFirmwareManagementParameters"/>
   </policy>
+  <policy user="debugd">
+    <allow send_destination="org.chromium.DeviceManagement"
+           send_interface="org.chromium.DeviceManagement"
+           send_member="InstallAttributesGetStatus"/>
+    <allow send_destination="org.chromium.DeviceManagement"
+           send_interface="org.chromium.DeviceManagement"
+           send_member="GetFirmwareManagementParameters"/>
+  </policy>
 </busconfig>
