ml: add heatmap palm rejection service
1. Add new mojom for heatmap palm rejection
2. Implement a basic service which currently only loads model

BUG=b:315720763
TEST=emerge-$BOARD ml

Change-Id: Ic9d52dce2fdc946da0b267223a2d50cefa494dbb
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5167027
Reviewed-by: Rob Schonberger <robsc@chromium.org>
Reviewed-by: Andrew Moylan <amoylan@chromium.org>
Tested-by: Jing Wang <jiwan@chromium.org>
Commit-Queue: Jing Wang <jiwan@chromium.org>

--- a/ml/BUILD.gn
+++ b/ml/BUILD.gn
@@ -34,6 +34,7 @@ generate_mojom_bindings("ml_mojo_bindings") {
     "mojom/grammar_checker.mojom",
     "mojom/graph_executor.mojom",
     "mojom/handwriting_recognizer.mojom",
+    "mojom/heatmap_palm_rejection.mojom",
     "mojom/image_content_annotation.mojom",
     "mojom/machine_learning_service.mojom",
     "mojom/model.mojom",
@@ -136,6 +137,7 @@ static_library("ml_common") {
     "handwriting.cc",
     "handwriting_proto_mojom_conversion.cc",
     "handwriting_recognizer_impl.cc",
+    "heatmap_processor.cc",
     "machine_learning_service_impl.cc",
     "metrics.cc",
     "model_conversions.cc",
@@ -294,6 +296,7 @@ if (use.test) {
       "graph_executor_impl_test.cc",
       "handwriting_proto_mojom_conversion_test.cc",
       "handwriting_test.cc",
+      "heatmap_processor_test.cc",
       "machine_learning_service_impl_multiprocess_test.cc",
       "machine_learning_service_impl_test.cc",
       "model_impl_test.cc",
