heartd: Create database and BootRecord table
This CL creates the database file and BootRecord table. Later CLs will
fetch and insert data into the database and use it.

BUG=b:309049308
TEST=(chroot) FEATURES=test emerge-brya heartd
TEST=(DUT) Database is created, table exists.

Change-Id: Iad81571ff35dd03039bf932a06bbcdc3d1b68741
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5162837
Reviewed-by: Florian Zubeil <zubeil@google.com>
Tested-by: Kerker Yang <kerker@chromium.org>
Reviewed-by: Denny Huang <dennyh@google.com>
Commit-Queue: Kerker Yang <kerker@chromium.org>

--- a/heartd/BUILD.gn
+++ b/heartd/BUILD.gn
@@ -24,6 +24,7 @@ executable("heartd") {
   pkg_deps = [
     "libbrillo",
     "mojo_service_manager",
+    "sqlite3",
   ]
   deps = [
     "//heartd/daemon:libheartd",
