libbrillo: Install brillo-test into /usr/local
Some test binaries will need the libbrillo-test.so, we need to install
it into the /usr/local

BUG=b:315754115
TEST=CQ
TEST=tast run $DUT hwsec.CryptohomeTPMLiveTests.*

Change-Id: I8e35f14e54c3979fc65ff57618bd3df068e8c2de
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5163827
Reviewed-by: Gwendal Grignou <gwendal@chromium.org>
Reviewed-by: Tim Bain <tbain@google.com>
Reviewed-by: Eric Caruso <ejcaruso@chromium.org>
Tested-by: Yi Chou <yich@google.com>
Commit-Queue: Gwendal Grignou <gwendal@chromium.org>

--- a/common-mk/BUILD.gn
+++ b/common-mk/BUILD.gn
@@ -238,6 +238,7 @@ config("test") {
     # The path where fake libraries are installed on the host. It is
     # for tests, implementing simple backend.
     _test_lib_dir = "build/lib"
+    _test_usr_local_lib_dir = "usr/local/lib"
 
     ldflags += [
       # The path where fake libraries are installed on the host. It is
@@ -251,6 +252,17 @@ config("test") {
                   [
                     "-Wl,-rpath=/",
                     _test_lib_dir,
+                    "64",
+                  ]),
+      string_join("",
+                  [
+                    "-Wl,-rpath=/",
+                    _test_usr_local_lib_dir,
+                  ]),
+      string_join("",
+                  [
+                    "-Wl,-rpath=/",
+                    _test_usr_local_lib_dir,
                     "64",
                   ]),
     ]
@@ -269,6 +281,17 @@ config("test") {
                   [
                     "${sysroot}/",
                     _test_lib_dir,
+                    "64",
+                  ]),
+      string_join("",
+                  [
+                    "${sysroot}/",
+                    _test_usr_local_lib_dir,
+                  ]),
+      string_join("",
+                  [
+                    "${sysroot}/",
+                    _test_usr_local_lib_dir,
                     "64",
                   ]),
     ]
