oobe_config: Add support for reading flex config
As described in go/fae-client-side-dd, the Flex token used for Flex
Auto-Enrollment will be read by the oobe_config_restore daemon and then
sent to Chrome where it will be used for Auto-Enrollment.

BUG=b:316944501
TEST=cros_run_unit_tests --board reven --packages oobe_config
TEST=Manually verify via logging that Chromium picks up flexToken value
when crrev/c/5187212 is present.

Cq-Depend: chromium:5188164, chrome-internal:6862000
Change-Id: I4b112f629f4c3a95e419f665fc9fafba418c86c6
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5187415
Reviewed-by: Lee Presland <zland@google.com>
Commit-Queue: Jackson Tadie <jacksontadie@google.com>
Reviewed-by: Miriam Polzer <mpolzer@google.com>
Tested-by: Jackson Tadie <jacksontadie@google.com>

--- a/oobe_config/etc/init/oobe_config_restore.conf
+++ b/oobe_config/etc/init/oobe_config_restore.conf
@@ -33,8 +33,21 @@ end script
 # Minijail actually forks off the desired process.
 expect fork
 
-exec minijail0 --config=/usr/share/minijail/oobe_config_restore.conf \
-    /usr/sbin/oobe_config_restore
+script
+  # Only bind-mount flex_config directory if present, otherwise minijail0 will
+  # fail. Use $@ array instead of empty string, as passing in "" to minijail
+  # also fails.
+  set --
+  if [ -d /mnt/stateful_partition/unencrypted/flex_config ]; then
+    set -- "$@" -b /mnt/stateful_partition/unencrypted/flex_config,,1
+  fi
+
+  exec minijail0 --config=/usr/share/minijail/oobe_config_restore.conf \
+    "$@" \
+    -- /usr/sbin/oobe_config_restore
+
+end script
+
 
 post-start exec minijail0 -u oobe_config_restore -G \
     /usr/bin/gdbus wait --system --timeout 15 org.chromium.OobeConfigRestore
