--- a/oobe_config/BUILD.gn
+++ b/oobe_config/BUILD.gn
@@ -31,7 +31,10 @@ group("all") {
 }
 
 pkg_config("target_defaults") {
-  defines = [ "USE_TPM2=${use.tpm2}" ]
+  defines = [
+    "USE_TPM2=${use.tpm2}",
+    "USE_REVEN_OOBE_CONFIG=${use.reven_oobe_config}",
+  ]
 
   # NOSORT
   pkg_deps = [
@@ -70,6 +73,7 @@ static_library("liboobeconfig") {
   sources = [
     "encryption/openssl_encryption.cc",
     "encryption/pstore_storage.cc",
+    "load_oobe_config_flex.cc",
     "load_oobe_config_rollback.cc",
     "network_exporter.cc",
     "oobe_config.cc",
@@ -212,6 +216,9 @@ if (use.test) {
       "oobe_config_test.cc",
       "rollback_cleanup_test.cc",
     ]
+    if (use.reven_oobe_config) {
+      sources += [ "load_oobe_config_flex_test.cc" ]
+    }
     configs += [
       "//common-mk:test",
       ":target_defaults",
