--- a/oobe_config/dbus_bindings/dbus-service-config.json
+++ b/oobe_config/dbus_bindings/dbus-service-config.json
@@ -1,6 +1,6 @@
 {
-  "service_name": "org.chromium.OobeConfigRestore",
   "object_manager": {
     "object_path": "/org/chromium/OobeConfigRestore/ObjectManager"
-  }
+  },
+  "service_name": "org.chromium.OobeConfigRestore"
 }
