--- a/oobe_config/minijail/oobe_config_restore.conf
+++ b/oobe_config/minijail/oobe_config_restore.conf
@@ -47,5 +47,6 @@ fs-path-rw = /run/dbus
 fs-path-rw = /var/lib/metrics/structured/events
 fs-path-rw = /var/lib/oobe_config_restore
 fs-path-rw = /mnt/stateful_partition/unencrypted/preserve
+fs-path-rw = /mnt/stateful_partition/unencrypted/flex_config
 fs-path-ro = /dev/log
 fs-path-ro = /sys/fs/pstore
