flexor: Move debug console upstart job to ramfs_debug
This change moves the debug console upstart job to a
separate ramfs_debug folder. Together with the change
in flexor's .ebuild, this debug console config is only
synced in case the "flexor_debug" USE flag is enabled.

BUG=b:314819758
TEST=Build flexor without the flexor_debug flag and observe
that there is no debug-tty.conf in
/build/reven/build/initramfs/etc/init.
Then enable the build flag and observe the file getting installed.

Change-Id: I8486b6ed4f7aa657e6e12ceaea4a55bc332b75bc
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5168067
Reviewed-by: Nicholas Bishop <nicholasbishop@google.com>
Commit-Queue: Bastian Kersting <bkersting@google.com>
Tested-by: Bastian Kersting <bkersting@google.com>

--- a/flexor/ramfs_debug/etc/init/debug-tty.conf
+++ b/flexor/ramfs_debug/etc/init/debug-tty.conf
@@ -7,8 +7,7 @@ author          "chromeos-flex-remote-deployment@google.com"
 
 console output
 
-# Starts a debug console. For now we always have one.
-# TODO(b/314819758): Only attach a debug console if we are a debug build.
+# Starts a debug console.
 start on starting boot-services
 respawn
 
