cryptohome: storage: Add a new ext4 container
To represent an ext4 filesystem (on top of any block device),
add a new encrypted_container class.
Move out ext4 operation out of dmcrypt and ephemeral containers.
Remove "is_raw_device" property from dmcrypt, as it is now always a raw
device.

BUG=b:312714708,b:172221451
TEST=CQ

Change-Id: I0938b9801e241ee109979a58b1195a07e4c5b94a
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5142538
Reviewed-by: Daniil Lunev <dlunev@chromium.org>
Commit-Queue: Gwendal Grignou <gwendal@chromium.org>
Tested-by: Gwendal Grignou <gwendal@chromium.org>

--- a/cryptohome/libs/BUILD.gn
+++ b/cryptohome/libs/BUILD.gn
@@ -457,6 +457,7 @@ static_library("libcrosplatform") {
     "../storage/encrypted_container/ecryptfs_container.cc",
     "../storage/encrypted_container/encrypted_container_factory.cc",
     "../storage/encrypted_container/ephemeral_container.cc",
+    "../storage/encrypted_container/ext4_container.cc",
     "../storage/encrypted_container/fscrypt_container.cc",
     "../storage/encrypted_container/logical_volume_backing_device.cc",
     "../storage/encrypted_container/loopback_device.cc",
