--- a/cryptohome/BUILD.gn
+++ b/cryptohome/BUILD.gn
@@ -471,6 +471,7 @@ if (use.test) {
       "storage/encrypted_container/dmcrypt_container_test.cc",
       "storage/encrypted_container/ecryptfs_container_test.cc",
       "storage/encrypted_container/ephemeral_container_test.cc",
+      "storage/encrypted_container/ext4_container_test.cc",
       "storage/encrypted_container/fscrypt_container_test.cc",
       "storage/encrypted_container/logical_volume_backing_device_test.cc",
       "storage/encrypted_container/loopback_device_test.cc",
