cryptohome: Add metrics for filesystem mounts
Report filesystem and fsck metrics in the ext4 container object.
We don't need an external scripts.
We can add it for user dmcrypt based containers.

Since both mount_encrypted and cryptohome use ext4 container, adding API
to get the metrics object.

BUG=b:172221451
TEST=CQ
 Check on Brya with chrome://histograms that the stats are correct.

Change-Id: I887b9a3a6b529d9b2afb48c8e120f4b45c8ba177
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5142540
Reviewed-by: Daniil Lunev <dlunev@chromium.org>
Commit-Queue: Gwendal Grignou <gwendal@chromium.org>
Tested-by: Gwendal Grignou <gwendal@chromium.org>

--- a/cryptohome/libs/BUILD.gn
+++ b/cryptohome/libs/BUILD.gn
@@ -477,6 +477,7 @@ static_library("libcrosplatform") {
   ]
   libs = [
     "cbor",
+    "ext2fs",
     "keyutils",
     "rootdev",
     "secure_erase_file",
