--- a/cryptohome/init/cryptohomed.conf
+++ b/cryptohome/init/cryptohomed.conf
@@ -8,7 +8,11 @@ author          "chromium-os-dev@chromium.org"
 # Starts the cryptohome daemon, which handles mounting and
 # unmounting users' encrypted home directories.  Also supports
 # offline login checks.
-start on started boot-services and started tpm_managerd and started chapsd
+start on started boot-services \
+      and started tpm_managerd \
+      and started chapsd \
+      and started device_managementd
+
 stop on hwsec-stop-clients-signal
 respawn
 
