modemloggerd: Run modemloggerd as root on test images
Since the init script is restricted to test images, run modemloggerd as
root. This removes unnecessary sandboxing.

BUG=b:318857561
TEST=ps -aux | grep modemloggerd

Change-Id: I3fa6928b16d110f8408c7d356ef4fad6f86ec3a4
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5172947
Tested-by: Pavan Holla <pholla@google.com>
Commit-Queue: Pavan Holla <pholla@google.com>
Reviewed-by: Eric Caruso <ejcaruso@chromium.org>

--- a/modemloggerd/init/modemloggerd.conf
+++ b/modemloggerd/init/modemloggerd.conf
@@ -10,7 +10,6 @@ import LOG_LEVEL
 
 start on started modemmanager
 stop on starting pre-shutdown
-expect fork
 oom score -100
 respawn
 # if the job respawns 3 times in 10 seconds, stop trying.
@@ -37,7 +36,6 @@ pre-start script
 
 end script
 
-exec minijail0                                                    \
-     --config /usr/share/minijail/modemloggerd.conf               \
-     /usr/local/usr/bin/modemloggerd                              \
-     --log_level="${LOG_LEVEL}"
+# This script is installed only in test images, thus, it isn't sandboxed.
+
+exec /usr/local/usr/bin/modemloggerd --log_level="${LOG_LEVEL}"
