debugd: Add generalized method to trigger firmware dump
Create a generalized D-Bus method to trigger firmware dump. This method
takes firmware dump type as the input and triggers the corresponding
firmware dump by invoking the debugfs API.

For WiFi, the permission of this method is restricted to shill and root.
The following debugfs path is called:
"/sys/kernel/debug/iwlwifi/<pcie name>/iwlmvm/fw_dbg_collect"

BUG=b:308219584, b:315264210
TEST=cros workon --board ${BOARD} start chromeos-base/debugd \
  chromeos-base/system_api
TEST=cros_sdk emerge-${BOARD} debugd chromeos-base/system_api && \
  cros deploy localhost:2300 debugd chromeos-base/system_api
TEST=(DUT) restart debugd
TEST=The following dbus method returns "true" and new wifi fwdump files
  are successfully generated under /var/spool/crash
  (DUT) dbus-send --system --fixed --print-reply=literal \
          --dest=org.chromium.debugd /org/chromium/debugd \
          org.chromium.debugd.GenerateFirmwareDump uint32:1
TEST=Observe the failure messages when the input is 0 (not supported)
  and 2 or beyond (invalid).
TEST=cros_sdk FEATURES=test emerge-${BOARD} debugd
  Note for unittest: this unittest has dependency on system_api enums
  under the debugd namespace (introduced in this CL). The unittest
  should be conducted after the emerge and deployment of the change for
  chromeos-base/system_api.

Change-Id: I06525f07d87091119e217c6eb6838c7636070a3c
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5152686
Auto-Submit: Yichen Yu <yichenyu@chromium.org>
Commit-Queue: Yichen Yu <yichenyu@chromium.org>
Tested-by: Yichen Yu <yichenyu@chromium.org>
Reviewed-by: Jorge Lucangeli Obes <jorgelo@chromium.org>
Reviewed-by: Nicolas Norvez <norvez@chromium.org>

--- a/debugd/BUILD.gn
+++ b/debugd/BUILD.gn
@@ -120,6 +120,7 @@ static_library("libdebugd") {
     "src/ec_typec_tool.cc",
     "src/ectool_util.cc",
     "src/example_tool.cc",
+    "src/firmware_dump_utils.cc",
     "src/helper_utils.cc",
     "src/icmp_tool.cc",
     "src/ipaddrs_tool.cc",
@@ -132,6 +133,7 @@ static_library("libdebugd") {
     "src/network_status_tool.cc",
     "src/oom_adj_tool.cc",
     "src/packet_capture_tool.cc",
+    "src/path_utils.cc",
     "src/perf_tool.cc",
     "src/perfetto_tool.cc",
     "src/ping_tool.cc",
@@ -439,6 +441,7 @@ if (use.test) {
       "src/dmesg_tool_test.cc",
       "src/drm_trace_tool_test.cc",
       "src/ec_typec_tool_test.cc",
+      "src/firmware_dump_utils_test.cc",
       "src/helper_utils_test.cc",
       "src/helpers/audit_log_utils.cc",
       "src/helpers/audit_log_utils_test.cc",
@@ -452,6 +455,7 @@ if (use.test) {
       "src/log_tool_doc_test.cc",
       "src/log_tool_test.cc",
       "src/metrics_test.cc",
+      "src/path_utils_test.cc",
       "src/perf_tool_test.cc",
       "src/printscan_tool_test.cc",
       "src/probe_tool_test.cc",
