--- a/debugd/share/org.chromium.debugd.conf
+++ b/debugd/share/org.chromium.debugd.conf
@@ -25,6 +25,9 @@
     <deny send_destination="org.chromium.debugd"
           send_interface="org.chromium.debugd"
           send_member="GetPerfOutputV2" />
+    <deny send_destination="org.chromium.debugd"
+          send_interface="org.chromium.debugd"
+          send_member="GenerateFirmwareDump" />
     <!-- Only typecd should access the following commands. -->
     <deny send_destination="org.chromium.debugd"
           send_interface="org.chromium.debugd"
@@ -91,6 +94,9 @@
     <allow send_destination="org.chromium.debugd"
            send_interface="org.chromium.debugd"
            send_member="EvaluateProbeFunction" />
+    <allow send_destination="org.chromium.debugd"
+           send_interface="org.chromium.debugd"
+           send_member="GenerateFirmwareDump" />
   </policy>
 
   <policy user="typecd">
@@ -109,6 +115,12 @@
     <allow send_destination="org.chromium.debugd"
            send_interface="org.chromium.debugd"
            send_member="EcTypeCHpdState" />
+  </policy>
+
+  <policy user="shill">
+    <allow send_destination="org.chromium.debugd"
+           send_interface="org.chromium.debugd"
+           send_member="GenerateFirmwareDump" />
   </policy>
 
   <limit name="max_replies_per_connection">512</limit>
