--- a/PRESUBMIT.cfg
+++ b/PRESUBMIT.cfg
@@ -10,6 +10,7 @@ check-mojom = ./common-mk/check-mojom.py --commit ${PRESUBMIT_COMMIT}
 check-synced-protos = ./common-mk/check-synced-protos.py --commit ${PRESUBMIT_COMMIT} ${PRESUBMIT_FILES}
 check-source-files-included = ./common-mk/check-source-files-included.py --commit ${PRESUBMIT_COMMIT} ${PRESUBMIT_FILES}
 no chrome_dev.conf = ./login_manager/presubmit.sh
+chromeos-config generated files = ./chromeos-config/regen.py --check
 
 [Hook Overrides]
 cros_license_check: true
