init: Add setuid_restrictions for nobody
Multiple projects need the rule to restrict the uid transition from
nobody to other users. It's better to put this rule inside chromeos-init
compared with putting it in other projects, since:
- A rule will have global effect instead of only affecting a single
  project/daemon, so it's better to avoid putting a rule for a uid which
  may be used by other projects into a project-specific folder.
- Currently setuid does not allow duplicated entries, so there will be
  conflicts if multiple projects try to define the same rule.

BUG=b:180654103
TEST=tast run $DUT security.SafesetidEnsurePolicy

Change-Id: I2f5af312bf4533723672de005fa6798a3731b668
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5179170
Commit-Queue: Jie Jiang <jiejiang@chromium.org>
Reviewed-by: Allen Webb <allenwebb@google.com>
Tested-by: Jie Jiang <jiejiang@chromium.org>
Reviewed-by: Mike Frysinger <vapier@chromium.org>
Reviewed-by: Ben Reich <benreich@chromium.org>

--- a/init/BUILD.gn
+++ b/init/BUILD.gn
@@ -10,6 +10,7 @@ group("all") {
     ":clobber-state",
     ":cros_sysrq_init",
     ":file_attrs_cleaner_tool",
+    ":install_setuid_restriction",
     ":net_poll_tool",
     ":periodic_scheduler",
     ":process_killer",
@@ -188,6 +189,11 @@ install_config("usr_share_cros_init_scripts") {
   sources = [ "send-boot-metrics.sh" ]
   install_path = "/usr/share/cros/init"
   type = "executable"
+}
+
+install_config("install_setuid_restriction") {
+  sources = [ "setuid_restrictions/init_uid_allowlist.txt" ]
+  install_path = "/usr/share/cros/startup/process_management_policies"
 }
 
 if (use.test) {
