net-base: move patchpanel::SocketForwarder to net-base
BUG=b:317751088
TEST=FEATURES=test emerge-brya net-base patchpanel system-proxy
TEST=/usr/libexec/fuzzers/system_proxy_connect_headers_parser_fuzzer

Cq-Depend: chromium:5187895
Change-Id: Ia7e15340b64b2ed354625f8a33da101e9f2dfe1f
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5180266
Tested-by: Chih-Yu Huang <akahuang@chromium.org>
Reviewed-by: Hugo Benichi <hugobenichi@google.com>
Reviewed-by: Jie Jiang <jiejiang@chromium.org>
Commit-Queue: Chih-Yu Huang <akahuang@chromium.org>

--- a/net-base/BUILD.gn
+++ b/net-base/BUILD.gn
@@ -64,6 +64,7 @@ shared_library("libnet-base") {
     "rtnl_listener.cc",
     "rtnl_message.cc",
     "socket.cc",
+    "socket_forwarder.cc",
   ]
   configs += [ ":target_defaults" ]
   install_path = "lib"
@@ -143,6 +144,7 @@ if (use.test) {
       "rtnl_handler_test.cc",
       "rtnl_listener_test.cc",
       "rtnl_message_test.cc",
+      "socket_forwarder_test.cc",
       "socket_test.cc",
     ]
     configs += [
