oobe_config: Place the metrics library for fuzzer
Fuzzer target also needs the metrics library in lib instead of
/build/lib, just as is the case for cros_host.

BUG=b:315567039
TEST=USE="asan fuzzer" emerge-amd64-generic oobe_config
cros_fuzz --board=amd64-generic shell
/usr/libexec/fuzzers/load_oobe_config_rollback_fuzzer

Change-Id: Ib35c963588a529610b37c359720a121df56c291f
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5180734
Reviewed-by: Roland Bock <rbock@google.com>
Commit-Queue: Miriam Polzer <mpolzer@google.com>
Tested-by: Miriam Polzer <mpolzer@google.com>

--- a/oobe_config/metrics/BUILD.gn
+++ b/oobe_config/metrics/BUILD.gn
@@ -122,7 +122,7 @@ shared_library("libenterprise_rollback_metrics-test") {
     ":libenterprise_rollback_metrics-test_pc",
     "//oobe_config/filesystem:filesystem_for_testing",
   ]
-  if (use.cros_host) {
+  if (use.cros_host || use.fuzzer) {
     install_path = "lib"
   } else {
     install_path = "/build/lib"
