mems_setup: Use libvpd instead of dump_vpd_log
We're phasing out the filesystem cache, now that libvpd and
/sys/firmware/vpd provide fast, consistent views of VPD.

With libvpd, there's no need for parsing an ASCII-based format, so drop
the inapplicable tests and fuzzer too.

BUG=b:288327526
TEST=CQ

Cq-Depend: chromium:5181802, chromium:5181803
Change-Id: Id8bf37fb979d7128c6ad7cdec285176cdf3739a6
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5182217
Reviewed-by: Gwendal Grignou <gwendal@chromium.org>
Commit-Queue: Gwendal Grignou <gwendal@chromium.org>
Tested-by: Brian Norris <briannorris@chromium.org>

--- a/mems_setup/BUILD.gn
+++ b/mems_setup/BUILD.gn
@@ -12,9 +12,6 @@ group("all") {
   if (use.test) {
     deps += [ ":mems_setup_testrunner" ]
   }
-  if (use.fuzzer) {
-    deps += [ ":mems_setup_vpd_loader_fuzzer" ]
-  }
 }
 
 pkg_config("target_defaults_pkg_deps") {
@@ -39,6 +36,7 @@ static_library("libmems_setup") {
     "delegate_impl.cc",
     "sensor_kind.cc",
   ]
+  libs = [ "vpd" ]
   public_pkg_deps = [ "libmems" ]
   configs += [ ":target_defaults" ]
 }
@@ -75,7 +73,6 @@ if (use.test) {
       "proximity_test.cc",
       "test_fakes.cc",
       "test_helper.cc",
-      "vpd_loader_test.cc",
     ]
     configs += [
       "//common-mk:test",
@@ -91,15 +88,5 @@ if (use.test) {
       "libmems_test_support",
       "libsar_test_support",
     ]
-  }
-}
-if (use.fuzzer) {
-  executable("mems_setup_vpd_loader_fuzzer") {
-    sources = [ "vpd_loader_fuzzer.cc" ]
-    configs += [
-      "//common-mk/common_fuzzer",
-      ":target_defaults",
-    ]
-    deps = [ ":libmems_setup" ]
   }
 }
