flex_hwis: Minijail allow checking enrollment
Apparently checking enrollment requires access to /run/lockbox,
which isn't accessible by default with minijail.

BUG=None
TEST=cros deploy the change to an enrolled VM, log in, inspect
     /var/log/messages to confirm that enrollment is detected

Change-Id: I7b9581e62ef48699c087d32a273557382b28025c
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5181476
Commit-Queue: Ted Brandston <tbrandston@google.com>
Commit-Queue: Justin Ouellette <justinoue@google.com>
Auto-Submit: Ted Brandston <tbrandston@google.com>
Tested-by: Ted Brandston <tbrandston@google.com>
Reviewed-by: Justin Ouellette <justinoue@google.com>

--- a/flex_hwis/minijail/flex_hwis.conf
+++ b/flex_hwis/minijail/flex_hwis.conf
@@ -37,6 +37,8 @@ bind-mount = /var/lib/devicesettings,,1
 bind-mount = /var/lib/flex_hwis_tool,,1
 # Allow D-Bus.
 bind-mount = /run/dbus
+# Allow checking enrollment.
+bind-mount = /run/lockbox
 # Allow mojo.
 bind-mount = /run/mojo,,1
 # Allow DNS resolution.
