federated: make training condition checkers thread safe
1. Makes training condition checkers use atomic bool to cache the
   result.
2. Makes network training condition checker listen to dbus signal
   instead of making method calls to request, because the dbus proxy has
   its builtin sequence checker that may crash.
3. Fixes unit tests accordingly.

BUG=b:319156085
TEST=cros_workon_make --board=hatch --test federated-service
TEST=Also verify on DUT

Change-Id: I67cea41ab9f3da53dd9be60a5149150b6dc62188
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5188032
Reviewed-by: Andrew Moylan <amoylan@chromium.org>
Tested-by: Xinglong Luan <alanlxl@chromium.org>
Commit-Queue: Xinglong Luan <alanlxl@chromium.org>
Commit-Queue: Andrew Moylan <amoylan@chromium.org>

--- a/federated/BUILD.gn
+++ b/federated/BUILD.gn
@@ -83,6 +83,7 @@ static_library("federated_common") {
     "power_supply_training_condition.cc",
     "scheduler.cc",
     "session_manager_proxy.cc",
+    "shill_proxy_impl.cc",
     "storage_manager.cc",
     "utils.cc",
   ]
@@ -137,6 +138,7 @@ if (use.test) {
     pkg_deps = [
       "libchrome-test",
       "libsession_manager-client-test",
+      "libshill-client-test",
     ]
   }
 
@@ -164,6 +166,7 @@ if (use.test) {
     sources = [
       "device_status_monitor_test.cc",
       "example_database_test.cc",
+      "fake_shill_proxy.cc",
       "memory_pressure_training_condition_test.cc",
       "mock_example_database.cc",
       "network_status_training_condition_test.cc",
