heartd: Add test tool
We can use this tool to test the functionality of heartd. To keep it
simple, I only support two actions in the tool interface because
supporting array of actions is complicated and not required for this
tool.

BUG=b:309049308
TEST=emerge-brya heartd-tool
TEST=Play /usr/bin/heartd-tool on DUT and test it.

Change-Id: I0d1ca7590ec2058bde03b9ca2784f0978b40dd3d
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5183661
Reviewed-by: Denny Huang <dennyh@google.com>
Commit-Queue: Kerker Yang <kerker@chromium.org>
Reviewed-by: Florian Zubeil <zubeil@google.com>
Tested-by: Kerker Yang <kerker@chromium.org>

--- a/heartd/tools/BUILD.gn
+++ b/heartd/tools/BUILD.gn
@@ -15,5 +15,7 @@ executable("heartd-tool") {
   pkg_deps = [
     "libbrillo",
     "libchrome",
+    "mojo_service_manager",
   ]
+  deps = [ "//heartd/mojom:libheartd_mojo_bindings" ]
 }
