shill: Add option to ff_debug to persist logging settings
It is hard to have more detailed log information right after reboot
(since default settings are restored), so to facilitate better debugging
of network related problems after reboot let's add '--persist' option to
ff_debug utility.

This option stores a configuration file (with current settings) that
shill will parse upon start.  The configuration file is meant to be
a temporary help, so user should remove it by running 'ff_debug --reset'
and (just in case user forgets to do that) shill will ignore (and
remove) the file if the time-stamp stored inside is older than 3 days.

BUG=b:314267240
TEST=FEATURES=test emerge-$BOARD shill
TEST=Manual. Start with default configuration:
      # ff_debug
      Current flimflam tags: []
      # ff_debug --level
      Current flimflam debug level: 0
    Change the configuration and persist it:
      # ff_debug wifi+service+device --level -3 --persist
      Old flimflam debug level: 0
      Current flimflam debug level: -3
      Old flimflam tags: []
      Current flimflam tags: [device+service+wifi]
    Restart shill and check that configuration is kept:
      # restart shill
      ...
      # ff_debug
      Current flimflam tags: [device+service+wifi]
      # ff_debug --level
      Current flimflam debug level: -3
    Reboot and check again:
      # reboot
      ...
      # ff_debug
      Current flimflam tags: [device+service+wifi]
      # ff_debug --level
      Current flimflam debug level: -3
    Now edit the configuration and change the "start-time" to be more
    than 3 days older (subtract more than 3 days in microseconds from
    the "start-time" value), restart shill and check if default
    configuration is restored:
      # vim /var/cache/shill/shill-log-override.json
      # restart shill
      ...
      # ff_debug
      Current flimflam tags: []
    Also check the net.log for the presence of the following log entry:

      INFO shill: [logging.cc(87)] Stale log 

--- a/shill/BUILD.gn
+++ b/shill/BUILD.gn
@@ -746,6 +746,7 @@ if (use.test) {
       "hook_table_test.cc",
       "http_request_test.cc",
       "ipconfig_test.cc",
+      "logging_test.cc",
       "mac_address_test.cc",
       "manager_test.cc",
       "metrics_test.cc",
