--- a/shill/shims/org.chromium.flimflam.conf
+++ b/shill/shims/org.chromium.flimflam.conf
@@ -193,6 +193,9 @@
              send_member="SetDebugLevel"/>
       <allow send_destination="org.chromium.flimflam"
              send_interface="org.chromium.flimflam.Manager"
+             send_member="PersistDebugConfig"/>
+      <allow send_destination="org.chromium.flimflam"
+             send_interface="org.chromium.flimflam.Manager"
              send_member="GetProperties"/>
       <allow send_destination="org.chromium.flimflam"
              send_interface="org.chromium.flimflam.Manager"
